# openvm-coremark

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run_coremark.sh  rust-toolchain.toml
.github/workflows/: lints.yml  run-benchmark.yml
host/: Cargo.toml
host/elf/: coremark-openvm.elf
host/scripts/: gpu_driver_setup.sh  gpu_monitor.sh  run_coremark.sh
host/src/: main.rs
portme/: add_u32.c  core_portme.c  core_portme.h
scripts/: run_coremark.sh
src/: main.rs
